--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -11,7 +11,7 @@ body {
   height: 100vh;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(to right,  #2b40ff,#07121a);
+  background: linear-gradient(to right,  rgb(255, 255, 255),#07121a);
 }
 
 .mainContainer {
